--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                     </button>
                 </div>
             </div>
+            <div class="ip-display" id="ip-display">
+                <i data-lucide="globe" size="14"></i>
+                <span id="public-ip">Detecting...</span>
+            </div>
             <div class="time-display" id="time-display">
                 <span class="date" id="current-date">--/--/----</span>
                 <span class="time" id="current-time">00:00:00</span>
